--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "ember-qunit": "0.1.8",
     "ember-qunit-notifications": "0.0.4",
     "qunit": "~1.15.0",
-    "fabric": "~1.4.13"
+    "fabric": "~1.4.13",
+    "html2canvas": "~0.4.1"
   }
 }
