--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^1.0.0",
+    "broccoli-sass": "^0.3.3",
     "connect-restreamer": "^1.0.1",
     "ember-cli": "0.1.4",
     "ember-cli-compass-compiler": "0.0.17",
