--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "express": "^4.8.5",
     "glob": "^4.0.5",
     "morgan": "^1.5.0"
+  },
+  "dependencies": {
+    "bower": "^1.3.12"
   }
 }
