--- a/package.json
+++ b/package.json
@@ -38,5 +38,11 @@
   },
   "dependencies": {
     "bower": "^1.3.12"
+  },
+  "scripts": {
+    "start": "./node_modules/ember-cli/bin/ember serve --environment=production --port=${PORT}",
+    "build": "./node_modules/ember-cli/bin/ember build",
+    "test": "./node_modules/ember-cli/bin/ember test",
+    "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
