--- a/.jshintrc
+++ b/.jshintrc
@@ -15,6 +15,7 @@
   "forin": false,
   "immed": false,
   "laxbreak": false,
+  "laxcomma": true,
   "newcap": true,
   "noarg": true,
   "noempty": false,
