--- a/tests/.jshintrc
+++ b/tests/.jshintrc
@@ -21,7 +21,10 @@
     "andThen",
     "currentURL",
     "currentPath",
-    "currentRouteName"
+    "currentRouteName",
+    "ok",
+    "expect",
+    "equal"
   ],
   "node": false,
   "browser": false,
